Fix assignment table overlaps

--- a/client/src/AssignmentsTab.css
+++ b/client/src/AssignmentsTab.css
@@ -1,3 +1,10 @@
+.assignments-tab {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .assignments-view-btn {
     margin: 5px;
 }
@@ -38,6 +45,7 @@
 
 .assignments-table-label {
     background-color: rgba(255, 255, 255, 0.1);
+    width: 100%;
     margin: 10px;
     padding: 5px;
     font-size: 120%;
